# grasping_tools

./: .gitignore  CMakeLists.txt  Doxyfile.in  data.txt  grasping_toolsConfig.cmake.in  package.xml
cmake/modules/: FindQhull.cmake
dep/gpis/: CMakeLists.txt  gpisConfig.cmake.in
dep/gpis/gpis/Sampler/: Composition.cpp  Composition.h  Sampler.cpp  Sampler.h  SamplerOutput.cpp  SamplerOutput.h
dep/gpis/gpis/Sampler/Object/: GPISObject.cpp  GPISObject.h  MatrixData.cpp  MatrixData.h
dep/gpis/gpis/Sampler/Part/: CholUpdateData.cpp  Part.cpp  Part.h
dep/gpis/gpis/Sampler/Prior/: GPISPrior.cpp  GPISPrior.h  Kernel.cpp  Mean.cpp  ParameterSampler.h  PriorFactory.cpp  PriorFactory.h
dep/gpis/gpis/Sampler/Prior/kernels/: SquaredExponentialKernel.h
dep/gpis/gpis/Sampler/Prior/means/: ConstantMean.h  CylinderMean.h  EllipseMean.h  FinitePlaneMean.h  PlaneMean.h  SphereMean.h  SphereVarRadiusMean.h
dep/gpis/gpis/Sampler/Prior/parameterSamplers/: CylinderParameterSamplerMH.h  EllipseParameterSamplerMH.h  PlaneParameterSampler.h  SphereParameterSampler.h  SphereParameterSamplerMH.h  SphereVarRadiusParameterSamplerMH.h
dep/gpis/gpis/Sampler/Prior/types_old/: FinitePlanePrior.cpp  FinitePlanePrior.h  InfPlanePrior.h  SphericalPrior.cpp  SphericalPrior.h
dep/gpis/gpis/Utils/: OverSegmentation.cpp  SurfaceGpis.cpp  SurfaceGpis.h  utilsGPIS.cpp  utilsMath.cpp  utilsMisc.h  utilsProb.cpp  utilsProb.h
dep/gpis/gpis/Utils/visualization/surfaceOctomap/: GpisCell.h  SurfaceOctomap.cpp  SurfaceOctomap.h  closestCell.cpp  closestCell.h  expandCell.cpp  expandCell.h  getLeafsCell.cpp  getLeafsCell.h  getLeafsCell.inl  validateCell.cpp  validateCell.h
dep/gpis/include/gpis/sampler/: Composition.h  Sampler.h
dep/gpis/include/gpis/sampler/object/: GPISObject.h  MatrixData.h
dep/gpis/include/gpis/sampler/part/: CholUpdateData.h  Part.h
dep/gpis/include/gpis/sampler/prior/: GPISPrior.h  Kernel.h  Mean.h  ParameterSampler.h  PriorFactory.h
dep/gpis/include/gpis/sampler/prior/kernels/: SquaredExponentialKernel.h
dep/gpis/include/gpis/sampler/prior/means/: ConstantMean.h  CylinderMean.h  EllipseMean.h  FinitePlaneMean.h  PlaneMean.h  SphereMean.h  SphereVarRadiusMean.h
dep/gpis/include/gpis/sampler/prior/parameterSamplers/: CylinderParameterSamplerMH.h  EllipseParameterSamplerMH.h  PlaneParameterSampler.h  SphereParameterSampler.h  SphereParameterSamplerMH.h  SphereVarRadiusParameterSamplerMH.h
dep/gpis/include/gpis/utils/: OverSegmentation.h  SurfaceGpis.h  utilsGPIS.h  utilsMath.h
dep/gpis/include/gpis/utils/visualization/surface_octomap/: SurfaceOctomap.h  closestCell.h  expandCell.h  getLeafsCell.h  validateCell.h
dep/gpis/src/sampler/: Composition.cpp  Sampler.cpp  SamplerOutput.cpp
dep/gpis/src/sampler/object/: GPISObject.cpp  MatrixData.cpp
dep/gpis/src/sampler/part/: CholUpdateData.cpp  Part.cpp
dep/gpis/src/sampler/prior/: GPISPrior.cpp  Kernel.cpp  Mean.cpp  PriorFactory.cpp
dep/gpis/src/sampler/prior/types_old/: InfPlanePrior.cpp
dep/gpis/src/utils/: OverSegmentation.cpp  SurfaceGpis.cpp  utilsGPIS.cpp  utilsMath.cpp  utilsProb.cpp
dep/gpis/src/utils/visualization/surface_octomap/: SurfaceOctomap.cpp  closestCell.cpp  expandCell.cpp  getLeafsCell.cpp  validateCell.cpp
dep/qhull/: CMakeLists.txt
dep/qhull/src/libqhullcpp/: Qhull.cpp  Qhull.h
examples/: CMakeLists.txt
examples/gpis_grasping/: main.cpp
examples/gpis_grasping/hand_model/: rightGripper.stl
examples/gpis_grasping/samples/: bun_zipper.ply  crawler_smooth_normals_2.ply  icosaedro.ply
examples/mesh_grasping/: main.cpp
examples/mesh_grasping/hand_model/: model.blend
examples/mesh_grasping/samples/: crawler_no_antenas.stl  crawler_no_antenas_handle.stl  mug.stl  multitool.stl
examples/point_cloud_grasping/: main.cpp
examples/point_cloud_grasping/hand_model/: base.stl  leftGripper.stl
examples/point_cloud_grasping/samples/: bun_zipper_small.ply  crawler_smooth_normals.ply
grasp_tools/: ContactPoint.cpp  Hand.h  mathTools.h  mathTools.inl
grasp_tools/hands/: GripperHandTwoFingers.cpp  GripperHandTwoFingers.inl  SimpleHandFourFingers.cpp  SimpleHandFourFingers.h
grasp_tools/objects/: ObjectGpis.cpp
grasp_tools/qualityMetrics/: DistancePointConvexCone.h
grasping_tools/: ContactPoint.cpp  ContactPoint.h  Grasp.cpp  Grasp.h  Hand.h  Object.h  grasping_tools.h  mathTools.cpp  mathTools.inl
grasping_tools/hands/: Arm3DOF.h  Arm3DOF.inl  GripperHandTwoFingers.cpp  GripperHandTwoFingers.h  GripperHandTwoFingers.inl  SimpleHandFourFingers.cpp  SimpleHandFourFingers.h  SimpleHandFourFingers.inl
grasping_tools/objects/: ObjectGpis.cpp  ObjectGpis.h  ObjectMesh.cpp  ObjectMesh.h
grasping_tools/qualityMetrics/: DistancePointConvexCone.cpp  DistancePointConvexCone.h  IterativeGraspWrenchSpace.cpp  IterativeGraspWrenchSpace.h
grasping_tools/visualization/: visualization.cpp  visualization.h
include/grasping_tools/: ContactPoint.h  Grasp.h  Hand.h  Object.h  grasping_tools.h  mathTools.h  mathTools.inl
include/grasping_tools/hands/: Arm3DOF.h  Arm3DOF.inl  GripperHandTwoFingers.h  GripperHandTwoFingers.inl  SimpleHandFourFingers.h  SimpleHandFourFingers.inl
include/grasping_tools/objects/: ObjectGpis.h  ObjectMesh.h  ObjectPointCloud.h
include/grasping_tools/qualityMetrics/: IterativeGraspWrenchSpace.h
include/grasping_tools/visualization/: visualization.h
src/: ContactPoint.cpp  Grasp.cpp  mathTools.cpp
src/hands/: Arm3DOF.cpp  GripperHandTwoFingers.cpp  SimpleHandFourFingers.cpp
src/objects/: ObjectGpis.cpp  ObjectMesh.cpp  ObjectPointCloud.cpp
src/qualityMetrics/: DistancePointConvexCone.cpp  IterativeGraspWrenchSpace.cpp
src/visualization/: visualization.cpp
tests/: CMakeLists.txt
tests/distancePointConeConvex/: CMakeLists.txt  testCones.cpp
tests/test_task_wrench/: CMakeLists.txt  test_task.cpp
